<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/paddingbottom"
                android:paddingLeft="@dimen/paddingleft"
                android:paddingRight="@dimen/paddingright"
                android:paddingTop="@dimen/paddingtop" >

                <LinearLayout
                    android:id="@+id/frametop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/videotext"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:hint=" Source video file:" />

                    <Button
                        android:id="@+id/selectvideo"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_state_change"
                        android:text="@string/selectvid"
                        android:textColor="#fff"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/imagedesc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frametop"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/start_time"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:singleLine="true" >
                    </EditText>

                    <Button
                        android:id="@+id/start_button"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_state_change"
                        android:text="@string/start_time"
                        android:textColor="#fff"
                        android:textSize="13sp" >
                    </Button>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imagedesc1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/framesize"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/framesize" />

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:entries="@array/country_arrays"
                        android:prompt="@string/string_title" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/frame2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frame"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/picname"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/frameformat" />

                    <Spinner
                        android:id="@+id/picformat"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:entries="@array/format_array"
                        android:prompt="@string/string_title" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/imagedesc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frame2"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/limagedesc21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/numberofframe" />

                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:hint="Click to set"
                            android:singleLine="true" >
                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/limagedesc22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/limagedesc21"
                        android:layout_marginTop="10dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/destname"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dest_name" />

                        <EditText
                            android:id="@+id/dest_name"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/destname"
                            android:maxLength="25"
                            android:singleLine="true" >
                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/limagedesc23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/limagedesc22"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/filename"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Duration(seconds)" >
                        </TextView>

                        <EditText
                            android:id="@+id/editText3"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="Click to set"
                            android:singleLine="true" >
                        </EditText>
                    </LinearLayout>
                </RelativeLayout>

                <!-- <LinearLayout -->
                <!-- android:id="@+id/imagedesc5" -->
                <!-- android:layout_width="fill_parent" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_marginTop="15dp" -->
                <!-- android:gravity="center" -->
                <!-- android:orientation="horizontal" > -->


                <!-- <Button -->
                <!-- android:id="@+id/close" -->
                <!-- android:layout_width="0dip" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_marginRight="5dp" -->
                <!-- android:layout_weight="1" -->
                <!-- android:background="@drawable/button_state_change" -->
                <!-- android:text="@string/close" -->
                <!-- android:textAlignment="center" -->
                <!-- android:textColor="#fff" -->
                <!-- android:textSize="13sp" /> -->


                <!-- <Button -->
                <!-- android:id="@+id/help" -->
                <!-- android:layout_width="0dip" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_weight="1" -->
                <!-- android:background="#3c86cc" -->
                <!-- android:text="@string/help" -->
                <!-- android:textAlignment="center" -->
                <!-- android:textColor="#fff" -->
                <!-- android:textSize="13sp" /> -->
                <!-- </LinearLayout> -->
            </LinearLayout>
        </ScrollView>

        <!-- <LinearLayout -->
        <!-- android:id="@+id/imagedesc6" -->
        <!-- android:layout_width="fill_parent" -->
        <!-- android:layout_height="wrap_content" > -->
        <!-- </LinearLayout> -->
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_state_change"
        android:text="@string/extractimages"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/rlbottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>